--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <div class="nav">
                 <img src="images/heart.png" alt="" class="item1">
                 <img src="images/comment.png" alt="" class="item2">
-                <img src="images/share.png" alt="" width="70%" class="item3">
+                <img src="images/share1.png" alt=""  class="item4">
+                <img src="images/share2.png" alt=""  class="item3">
             </div>
             <div class="like">
                 <img src="images/heart-black.png" alt="">
