--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <div class="container">
     <div class="content">
         <div class="header">
-            <div class="avatar">
+            <div class="image-ava">
+                <div class="avatar">
+                </div>
             </div>
+
             <div class="user">
                 <img src="images/user.png" alt="">
                 <p>Nullam, Dictum</p>
@@ -27,10 +30,13 @@
         </div>
         <div class="footer">
             <div class="nav">
-                <img src="images/heart.png" alt="" class="item1">
-                <img src="images/comment.png" alt="" class="item2">
-                <img src="images/share1.png" alt=""  class="item4">
-                <img src="images/share2.png" alt=""  class="item3">
+
+                <img src="images/heart.png" height="29" width="33" class="item1"/>
+                <img src="images/comment.png" height="29" width="28" class="item2"/>
+
+
+                <img src="images/share1.png" height="30" width="37" class="item4"/>
+                <img src="images/share2.png" height="34" width="32" class="item3"/>
             </div>
             <div class="like">
                 <img src="images/heart-black.png" alt="">
@@ -38,7 +44,10 @@
             </div>
             <div class="status">
                 <img src="images/user.png" alt="">
-                <span>dolor sit amet  #augue #adipiscing </span>
+                <div class="coon">
+                    <span>dolor sit amet  #augue #adipiscing </span>
+                </div>
+
             </div>
         </div>
     </div>
