--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
                 <div class="avatar">
                 </div>
             </div>
-
             <div class="user">
-                <img src="images/user.png" alt="">
+                <img src="images/user.png">
                 <p>Nullam, Dictum</p>
             </div>
             <div class="follow">
                 <img src="images/follow.png" id="fl1">
                 <img src="images/follow-word.png" id="fl2">
+                <img src="images/option.png" class="option">
             </div>
-            <div class="option">
-                <img src="images/option.png" alt="">
-            </div>
+            <!--<div class="option">-->
+               <!---->
+            <!--</div>-->
         </div>
         <div class="images">
             <img src="images/camera.png" alt="">
@@ -31,12 +31,12 @@
         <div class="footer">
             <div class="nav">
 
-                <img src="images/heart.png" height="29" width="33" class="item1"/>
-                <img src="images/comment.png" height="29" width="28" class="item2"/>
+                <img src="images/heart.png"  class="item1"/>
+                <img src="images/comment.png" class="item2"/>
 
 
-                <img src="images/share1.png" height="30" width="37" class="item4"/>
-                <img src="images/share2.png" height="34" width="32" class="item3"/>
+                <img src="images/share1.png" class="item4"/>
+                <img src="images/share2.png" class="item3"/>
             </div>
             <div class="like">
                 <img src="images/heart-black.png" alt="">
