--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>HTML 2</title>
+    <title>Font-End2</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
