--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Font-End2</title>
+    <title>HTML 2</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -17,9 +17,11 @@
                 <p>Nullam, Dictum</p>
             </div>
             <div class="follow">
-                <img src="images/follow.png" id="fl1">
                 <img src="images/follow-word.png" id="fl2">
+                <img src="images/follow.png" id="fl1">
+
                 <img src="images/option.png" class="option">
+
             </div>
             <!--<div class="option">-->
                <!---->
